feat: add JWT gesture + API
