# api/internal/docs/generated/swagger.json
@@ -150,6 +150,13 @@
                         "name": "email",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -170,7 +177,26 @@
                 "tags": [
                     "Sign"
                 ],
-                "operationId": "client.SignOut",
+                "operationId": "jwt.Auth =\u003e client.SignOut",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/sign/renew": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sign"
+                ],
+                "operationId": "client.SignRenew",
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -200,8 +226,14 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "201": {
+                        "description": "Client created"
+                    },
+                    "400": {
+                        "description": "Invalid email or password"
+                    },
+                    "409": {
+                        "description": "Client already exists"
                     }
                 }
             }
